@@ -1,3 +1,11 @@
+2007-03-15  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/webservice/beans/metadata/DOMInit.java: ignore
+	missing beanmetadata.xml
+	* src/de/schlund/pfixcore/webservice/config/GlobalServiceConfig.java: ignore
+	beanmetadata.xml in difference check
+	* skel/projects/common/conf/factory.xml: remove ExceptionHandler
+
 2007-03-15  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* projects/core/editor2/txt/util_includes.xml: 
